ready for submission

--- a/K2planettable.tex
+++ b/K2planettable.tex
@@ -59,6 +59,6 @@
 %%220321605 & K2-212 b & 9.79540 & 17.3 & 1.6 & 1.6 & 2.72 & 0.16 & 0.13 \\
 %%220481411 & K2-216 b & 2.17479 & 209.6 & 17.2 & 15.5 & 1.69 & 0.10 & 0.08 
 \enddata
-\tablecomments{Only the first five rows are shown here to illustrate the table's content and format.}
+\tablecomments{Only the first five rows are shown here to illustrate the table's content and format. The complete table in csv format is available in the arXiv source.}
 \end{deluxetable*}
 \capstarttrue
