--- a/Keplerplanettable.tex
+++ b/Keplerplanettable.tex
@@ -281,6 +281,6 @@
 %%12302530 & Kepler-155 c & 52.66153 & 1.3 & 0.2 & 0.2 & 1.92 & 0.26 & 0.22 \\
 %%12506770 & Kepler-895 b & 2.80624 & 97.3 & 11.4 & 11.4 & 1.58 & 0.10 & 0.09 
 \enddata
-\tablecomments{Only the first five rows are shown here to illustrate the table's content and format.}
+\tablecomments{Only the first five rows are shown here to illustrate the table's content and format. The complete table in csv format is available in the arXiv source.}
 \end{deluxetable*}
 \capstarttrue
