--- a/radvalley.tex
+++ b/radvalley.tex
@@ -76,7 +76,6 @@
 
 \begin{document}
 \title{Evolution of the radius valley around low mass stars from \emph{KEPLER} and \emph{K2}}
-%\title{The radius valley around low mass stars from Kepler and K2: } 
 \author{Ryan Cloutier\altaffilmark{1,2}}
 \author{Kristen Menou\altaffilmark{3,2}}
 
@@ -206,7 +205,7 @@ to calculate the occurrence rate of small close-in planets in which the structur
 low mass stars is resolved (Sect.~\ref{sect:occurrence}). In Sect.~\ref{sect:models} we compare our results to
 model predictions and to results from planet population studies around Sun-like stars. 
 Sect.~\ref{sect:discussion} presents a discussion of our results
-and its implications with a summary of our main findings being presented in Sect.~\ref{sect:conclusions}.
+and its implications followed by a summary of our main findings in Sect.~\ref{sect:conclusions}.
 
 
 \section{Low mass dwarf stellar sample} \label{sect:stars}
@@ -674,9 +673,9 @@ from \kepler{} than from \ktwo{}
 (see \autoref{fig:stars}). These factors compound to produce a lower planet occurrence rate measured
 from \ktwo{} confirmed planets than with \kepler{} as the reduced \ktwo{} detection completeness
 (see \autoref{fig:compmap}) is insufficient to account for the lower measured
-planet occurrence rates. \textbf{Explicitly, we measure cumulative occurrence rates of
-  $2.48\pm 0.32$ and $0.75\pm 0.11$ confirmed planets per star with $P\in [0.5,100]$ days
-  and $r_p\in [0.5,4]$ R$_{\oplus}$ from \kepler{} and \ktwo{} respectively.}
+planet occurrence rates. Explicitly, we measure cumulative occurrence rates of
+$2.48\pm 0.32$ and $0.75\pm 0.11$ confirmed planets per star with $P\in [0.5,100]$ days
+and $r_p\in [0.5,4]$ R$_{\oplus}$ from \kepler{} and \ktwo{} respectively.
 The discrepancy arises from the disparate resources that have
 been dedicated to the validation of planet candidates from \kepler{} and \ktwo{.} The result being that
 the number of real planets within the full set of planet candidates from \ktwo{} is underestimated
@@ -756,14 +755,14 @@ transit timing variations.
 Planet parameters are retrieved from the NASA Exoplanet Archive for planets orbiting stars with
 \teff{} $\in[2800,4700]$ K, whose orbital periods and radii span the domain considered in \autoref{fig:fmap},
 and whose masses are inconsistent with zero (i.e. no mass upper limits).
-The properties of the resulting 18 planets are listed in \autoref{table:rhop}. \textbf{Based on the
-  planetary masses, radii, and compositional mass-radius relations from \cite{zeng13},
-  we define the following composition dispositions: \emph{rocky}
-  planets have bulk densities that are greater than or consistent with a purely rocky composition
-  (i.e. 100\% MgSiO$_3$) given the planet's size, \emph{gaseous} planets have bulk densities that are less
-  than and inconsistent with that of a pure water world (i.e. 100\% H$_2$O) given the planet's size, 
-  and all intermediate planets are flagged as having an \emph{ambiguous} bulk composition (i.e. not clearly
-  terrestrial-like or likely to be hosting a significant gaseous envelope).}
+The properties of the resulting 18 planets are listed in \autoref{table:rhop}. Based on the
+planetary masses, radii, and compositional mass-radius relations from \cite{zeng13},
+we define the following composition dispositions: \emph{rocky}
+planets have bulk densities that are greater than or consistent with a purely rocky composition
+(i.e. 100\% MgSiO$_3$) given the planet's size, \emph{gaseous} planets have bulk densities that are less
+than and inconsistent with that of a pure water world (i.e. 100\% H$_2$O) given the planet's size, 
+and all intermediate planets are flagged as having an \emph{ambiguous} bulk composition (i.e. not clearly
+terrestrial-like or likely to be hosting a significant gaseous envelope).
 
 \input{densitytable}
 
@@ -779,6 +778,8 @@ such that we will refer to this feature as the non-rocky peak in what follows.
 Lastly, we note that the radius valley as a function of $P$ is not completely void of planets.
 This may allude to the efficiency of any gap clearing mechanism around low mass stars and is
 discussed further in Sect.~\ref{sect:void}.
+
+\vspace{1cm}
 
 \subsection{Occurrence rates versus planet radius}
 Next, we marginalize over $P$ and compute the one-dimensional occurrence rate of small close-in planets
@@ -823,6 +824,7 @@ occurrence rate continues to persist with the location of the valley features on
 We interpret this as further evidence for the existence of the radius valley in the close-in planet population
 around low mass stars.
 
+\vspace{1cm}
 
 \subsection{Inclusion of supplemental K2 planet candidates}
 In an attempt to improve the counting statistics in the occurrence rate calculations,
@@ -872,7 +874,7 @@ further substantiated as the contrast between the maximum $f_j$ of the rocky pla
 and the minimum $f_j$ of the valley ($r_p \sim 1.6$ R$_{\oplus}$) decreases from 0.070
 to 0.054 R$_{\oplus}$ (i.e. $3.2\sigma \to 2.9\sigma$). Contamination by true FPs in the planet sample containing
 PCs may contribute to the reduced significance of the valley so we revert to considering confirmed planets only
-for the remainder of this study.
+for the remainder of this study. 
 
 
 \begin{figure*}
@@ -890,29 +892,30 @@ for the remainder of this study.
 
 
 \subsection{Comparison of the recovered planet occurrence rates from Kepler and K2} \label{sect:comparef}
-\textbf{Here we present a broad comparison of the occurrence rates of small close-in planets around
-  low mass dwarf stars from \kepler{} and \ktwo{.} Recall from Sect.~\ref{sect:fmap} that
-  we measure cumulative occurrence rates from confirmed \kepler{} and \ktwo{} planets of 
-  $2.48\pm 0.32$ and $0.75\pm 0.11$ planets per star respectively. Note that the former is consistent with
-  previous measurements from \kepler{} \citep{morton14,dressing15a,gaidos16}. However, noting that 
-  the FP rate of small \ktwo{} PCs is small ($\sim 5.7$\%, \autoref{tab:FP}), many \ktwo{} PCs should contribute
-  to the calculation of the occurrence rates from \ktwo{.}
-}
+Here we present a broad comparison of the occurrence rates of small close-in planets around
+low mass dwarf stars from \kepler{} and \ktwo{.} Recall from Sect.~\ref{sect:fmap} that
+we measure cumulative occurrence rates from confirmed \kepler{} and \ktwo{} planets of 
+$2.48\pm 0.32$ and $0.75\pm 0.11$ planets per star respectively. Note that the former is consistent with
+previous measurements from \kepler{} \citep{morton14,dressing15a,gaidos16}. However, noting that 
+the FP rate of small \ktwo{} PCs is small ($\sim 5.7$\%, \autoref{tab:FP}), many \ktwo{} PCs should contribute
+to the calculation of the occurrence rates from \ktwo{.}
 
-\textbf{We consider the 126 PCs from the transiting planet search in \ktwo{} campaigns 0-8 \citep{kruse19}.
-  Statistically correcting
-  for FPs results in 119 PCs plus 52 confirmed planets around 7227 \ktwo{} stars within our stellar sample that
-  were observed in any of the \ktwo{} campaigns 0-8. Given the period and radius of each of these 171 planets,
-  we apply the completeness corrections computed in Sect.~\ref{sect:k2sens}, divide out the number of low mass stars
-  observed in campaigns 0-8, and measure a cumulative occurrence rate of $2.26\pm 0.38$ planets per star. The inclusion
-  of PCs from \cite{kruse19} boosts the cumulative occurrence rate measurement from \ktwo{} to a value that is
-  consistent with that from \kepler{.} This indicates that the \kepler{} and
-  \ktwo{} planet populations are consistent and that the reduced detection sensitivity of \ktwo{} compared to
-  \kepler{} is genuine (c.f. Fig.~\ref{fig:senscurves}). Note that the lesser \ktwo{} completeness continues to
-  have a negative
-  effect on the precision of the occurrence rate measurement despite \ktwo{} campaigns 0-8 having $\sim 1.8$ times
-  as many low mass dwarf stars as \kepler{.}
-}
+
+We consider the 126 PCs from the transiting planet search in \ktwo{} campaigns 0-8 \citep{kruse19}.
+Statistically correcting
+for FPs results in 119 PCs plus 52 confirmed planets around 7227 \ktwo{} stars within our stellar sample that
+were observed in any of the \ktwo{} campaigns 0-8. Given the period and radius of each of these 171 planets,
+we apply the completeness corrections computed in Sect.~\ref{sect:k2sens}, divide out the number of low mass stars
+observed in campaigns 0-8, and measure a cumulative occurrence rate of $2.26\pm 0.38$ planets per star. The inclusion
+of PCs from \cite{kruse19} boosts the cumulative occurrence rate measurement from \ktwo{} to a value that is
+consistent with that from \kepler{} (i.e. $2.48\pm 0.32$). This indicates that the \kepler{} and
+\ktwo{} planet populations are consistent and that the reduced detection sensitivity of \ktwo{} compared to
+\kepler{} is genuine (c.f. Fig.~\ref{fig:senscurves}). Note that the lesser \ktwo{} completeness continues to
+have a negative
+effect on the precision of the occurrence rate measurement despite \ktwo{} campaigns 0-8 having $\sim 1.8$ times
+as many low mass dwarf stars as \kepler{.} We also note that in this comparison we have not corrected for any stellar
+mass dependence of the occurrences rates which may produce a true discrepancy between the \kepler{} and \ktwo{}
+values as their respective stellar samples within this study are not equivalent (c.f. \autoref{fig:stars}).  
 
 \section{Evolution of the radius valley around low mass stars} \label{sect:models}
 \subsection{Slope of the radius valley}
@@ -921,27 +924,21 @@ our planet sample as well as for the close-in \kepler{} planets around Sun-like 
 from \cite{martinez19}.
 In this parameter space we calculate the slope of the radius valley with $F$ and compare the measured
 value to model predictions of the transition from rocky to non-rocky planets
-versus insolation. \textbf{We measure the slope using a similar methodology to \cite{martinez19} wherein
-  the two-dimensional occurrence rates are first resampled from its MAP value and uncertainties in
-  $10^3$ realizations. In each realization the
-  one-dimensional occurrence rate distribution $f_j(r_p)$ is computed in logarithmically spaced $F$
+versus insolation. We measure the slope using a similar methodology to \cite{martinez19} wherein
+the two-dimensional occurrence rates are first resampled from its MAP value and uncertainties in
+$10^3$ realizations. In each realization the
+one-dimensional occurrence rate distribution $f_j(r_p)$ is computed in logarithmically spaced $F$
 bins. From each distribution the $f_j$-weighted radii of the rocky and non-rocky peaks are then calculated.
 The central radius of the valley is computed as the average radius between the two peaks
 assuming a uniform weighting as we are interested in measuring the location of the valley and not the relative
 strength of the two peaks as a function of $F$. The resulting radius valley locations in the $\log{F}-\log{r_p}$
 space are then fit with a linear model as depicted in \autoref{fig:fmapF}. 
-%We measure the slope by resampling $10^3$ planet populations from the inverse
-%occurrence rates (and their fractional uncertainties at each point $ij$) over the domains
-%$F\in [1,30]$ F$_{\oplus}$ and $r_p\in [1,2.5]$ R$_{\oplus}$.
-%Each domain is defined to neglect regions far from the radius valley that would otherwise dominate the
-%inverse occurrence rates. The number of sampled planets in the $\log{F}-r_p$ space is then fit with a
-%linear function as depicted in \autoref{fig:fmapF}.
 Over the $10^3$ realizations of resampled planet
 populations, we measure an average slope and standard deviation of
 $r_{p,\text{valley}} \propto F^{-0.060\pm 0.025}$. Similarly, repeating this exercise in the $\log{P}-\log{r_p}$
 space yields $r_{p,\text{valley}} \propto P^{-0.058\pm 0.022}$. For ease of reference, the slopes measured
 in this work and around FGK stars from the CKS \citep{martinez19} are reported in
-Table~\autoref{table:slopes}.}
+Table~\autoref{table:slopes}.
 
 \input{slopetable}
 
@@ -1067,7 +1064,7 @@ M$_{\odot}$ (i.e. $\sim 62$\% of our confirmed planet sample).
   \includegraphics[width=.98\hsize]{figures/rphist_kepk2_compMs.png}%
   \end{ocg}
   \hspace{-.98\hsize}%
-  \caption{2D and 1D planet occurrence rates in various stellar mass bins. \emph{Top panels}: planet occurrence
+  \caption{(\emph{Interactive figure}) 2D and 1D planet occurrence rates in various stellar mass bins. \emph{Top panels}: planet occurrence
     rate maps as a function of orbital period and planet radius. Overplotted are the relevant subsets of the
     population of confirmed planets from \kepler{} and
     \ktwo{} \ToggleLayer{fig:on4r,fig:off4r}{\protect\cdbox{(\emph{small circles and diamonds})}}.
@@ -1363,12 +1360,12 @@ core-powered mass low or gas-poor formation at $\sim 2.6\sigma$.
 
 
 \subsection{Implications for RV planet searches around low mass stars}
-Many existing and up-coming RV spectrographs
+Many existing and up-coming radial velocity (RV) spectrographs
 will be partially focused on characterizing the masses of planets spanning the radius valley in order to
 improve our physical understanding of the nature of those planets. In particular, a subset of those spectrographs
 operating in the near-IR will focus heavily on M dwarf planetary systems
 (e.g. CARMENES; \citealt{quirrenbach14}, HPF; \citealt{mahadevan12}, IRD; \citealt{kotani14},
-NIRPS; \citealt{bouchy17}, SPIRou; \citealt{donati18}). In defining target samples
+MAROON-X; \citealt{seifahrt18}, NIRPS; \citealt{bouchy17}, SPIRou; \citealt{donati18}). In defining target samples
 that are equally complete on either side of the radius valley, it is critically important that the location
 of the transition between rocky and non-rocky planets is known. In our full stellar sample, which includes
 mid-to-late K dwarfs, the radius valley is centered at $1.54\pm 0.16$ R$_{\oplus}$. Although we remind the
@@ -1444,7 +1441,7 @@ intersect at $P\sim 23.52$ days such that two regions of interest emerge and are
   \includegraphics[width=\hsize]{figures/fmapregion_tois_Msgt0d0_xbin39_ybin26.png}%
   \end{ocg}
   \hspace{-\hsize}%
-  \caption{Regions of interest for resolving the transition between rocky and non-rocky planets
+  \caption{(\emph{Interactive figure}) Regions of interest for resolving the transition between rocky and non-rocky planets
     around low mass stars. The colormap depicts the occurrence rate of small close-in planets from
     \autoref{fig:fmap}. The rocky to non-rocky transition measured in this work is highlighted
     by the \emph{solid black line}. The transition measured around FGK stars from \cite{martinez19}
@@ -1501,10 +1498,20 @@ partial filling of the gap.
 \section{Summary of main findings} \label{sect:conclusions}
 This study presented calculations of the occurrence rate of small close-in planets orbiting low mass stars
 using data from the \kepler{} and \ktwo{} transit surveys. Our main findings are summarized below.
+%Our occurrence rate calculations were based on
+%the sets of confirmed planets from each mission along with their unique transit detection sensitivities.
+%Notably,
+%when \ktwo{} planet candidates are included and statistically corrected for contamination by astrophysical
+%false positives, the cumulative occurrence rates of small close-in planets around low mass stars
+%from \kepler{} and \ktwo{} are found to be consistent.
 
 \begin{itemize}
 \item The radius valley structure in the occurrence rate of small close-in planets---previously resolved around
   Sun-like stars---is demonstrated to persist around low mass stars (i.e. mid-K to mid-M dwarfs).
+\item The occurrence rate from considering confirmed \ktwo{} planets only is likely underestimated. Although
+  when \ktwo{} planet candidates are included and statistically corrected for false positive contamination, the
+  measured \kepler{} and \ktwo{} cumulative occurrence rates of small close-in planets around low mass stars
+  are in agreement: $2.48\pm 0.32$ and $2.26\pm 0.38$ planets per star respectively.
 \item The radius valley around low mass stars exhibits a negative slope with insolation
   ($r_{p,\text{valley}} \propto F^{-0.060\pm 0.025}$) unlike 
   around Sun-like stars whose measured slope is positive
@@ -1535,6 +1542,7 @@ using data from the \kepler{} and \ktwo{} transit surveys. Our main findings are
 We thank Martin Paegert for his efforts in contributing relevant data to and for his assistance in querying the \tess{}
 CTL database. We also thank Jennifer Winters and Jonathan Irwin for discussions regarding the population of nearby
 M dwarfs. We also thank Sam Quinn for discussions regarding past results from the \ktwo{} mission.
+We also thank David Charbonneau for his thorough review of this manuscript.
 We thank the Canadian Institute for Theoretical Astrophysics for use of the Sunnyvale computing cluster
 throughout the early stages of this work. RC was supported by the Natural Sciences and Engineering Research Council of
 Canada and a grant from the National Aeronautics and Space Administration in support of the \tess{} science mission.
