--- a/radvalley.tex
+++ b/radvalley.tex
@@ -910,7 +910,7 @@ observed in campaigns 0-8, and measure a cumulative occurrence rate of $2.26\pm 
 of PCs from \cite{kruse19} boosts the cumulative occurrence rate measurement from \ktwo{} to a value that is
 consistent with that from \kepler{} (i.e. $2.48\pm 0.32$). This indicates that the \kepler{} and
 \ktwo{} planet populations are consistent and that the reduced detection sensitivity of \ktwo{} compared to
-\kepler{} is genuine (c.f. Fig.~\ref{fig:senscurves}). Note that the lesser \ktwo{} completeness continues to
+\kepler{} is genuine (c.f. \autoref{fig:senscurves}). Note that the lesser \ktwo{} completeness continues to
 have a negative
 effect on the precision of the occurrence rate measurement despite \ktwo{} campaigns 0-8 having $\sim 1.8$ times
 as many low mass dwarf stars as \kepler{.} We also note that in this comparison we have not corrected for any stellar
@@ -937,8 +937,7 @@ Over the $10^3$ realizations of resampled planet
 populations, we measure an average slope and standard deviation of
 $r_{p,\text{valley}} \propto F^{-0.060\pm 0.025}$. Similarly, repeating this exercise in the $\log{P}-\log{r_p}$
 space yields $r_{p,\text{valley}} \propto P^{-0.058\pm 0.022}$. For ease of reference, the slopes measured
-in this work and around FGK stars from the CKS \citep{martinez19} are reported in
-Table~\autoref{table:slopes}.
+in this work and around FGK stars from the CKS \citep{martinez19} are reported in \autoref{table:slopes}.
 
 \input{slopetable}
 
@@ -1545,7 +1544,7 @@ M dwarfs. We also thank Sam Quinn for discussions regarding past results from th
 We also thank David Charbonneau for his thorough review of this manuscript.
 We thank the Canadian Institute for Theoretical Astrophysics for use of the Sunnyvale computing cluster
 throughout the early stages of this work. RC was supported by the Natural Sciences and Engineering Research Council of
-Canada and a grant from the National Aeronautics and Space Administration in support of the \tess{} science mission.
+Canada and a grant from the National Aeronautics and Space Administration in support of the \tess{} science mission.  KM is supported by the Natural Sciences and Engineering Research Council of Canada.
 
 \bibliographystyle{apj}
 \bibliography{refs}
