about to start addressing referee comments

--- a/radvalley.tex
+++ b/radvalley.tex
@@ -77,7 +77,7 @@
 \begin{document}
 \title{Evolution of the radius valley around low mass stars from \emph{KEPLER} and \emph{K2}}
 \author{Ryan Cloutier\altaffilmark{1,2}}
-\author{Kristen Menou\altaffilmark{3,2}}
+\author{Kristen Menou\altaffilmark{3,2,4}}
 
 \email{ryan.cloutier@cfa.harvard.edu}
 
@@ -87,6 +87,8 @@
 of Toronto, 50 St. George Street, Toronto, ON, M5S 3H4, Canada}
 \altaffiltext{3}{Physics \& Astrophysics Group, Dept. of Physical \& Environmental Sciences,
   University of Toronto Scarborough, 1265 Military Trail, Toronto, ON, M1C 1A4, Canada}
+\altaffiltext{4}{Dept. of Physics,
+  University of Toronto, 60 St. George Street, Toronto, ON, M5S 1A7, Canada}
 
 
 \begin{abstract}
@@ -185,7 +187,7 @@ with stellar mass can allude to which process---if any---dominates the evolution
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.98\hsize]{figures/Bergerplanethist.png}
+  \includegraphics[width=0.98\hsize]{Bergerplanethist.png}
   \caption{Empirical distributions of \kepler{} planet radii. Histograms of \kepler{} planet radii
     from \cite{berger18} for planets with host stellar effective temperatures \teff{} $\in [4700,6500]$ K
     (\emph{blue}) and \teff{} $<4700$ K (\emph{red}). The former subset of 2816 planets corresponds to the
@@ -268,7 +270,7 @@ $M_s$ is $\sim 5.5$\%.
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.98\hsize]{figures/stellar_corner_KepandK2.png}
+  \includegraphics[width=0.98\hsize]{stellar_corner_KepandK2.png}
   \caption{Low mass dwarf stellar samples from \kepler{} and \ktwo{.} Distributions of \kepler{} magnitudes,
     effective temperatures, stellar radii, and stellar masses for stars in our final stellar sample from either
     \kepler{} (\emph{blue histogram and markers}) or \ktwo{} (\emph{red histogram and markers}).}
@@ -396,12 +398,12 @@ measurement uncertainties and with a fractional precision on $P$ inflated to 20\
 
 \begin{figure*}
   \centering
-  \includegraphics[width=\hsize]{figures/Ndetmap_map_Msgt0d0_xbin45_ybin27.png}%
+  \includegraphics[width=\hsize]{Ndetmap_map_Msgt0d0_xbin45_ybin27.png}%
   \hspace{-\hsize}%
   \begin{ocg}{fig:offNd}{fig:offNd}{0}%
   \end{ocg}%
   \begin{ocg}{fig:onNd}{fig:onNd}{1}%
-  \includegraphics[width=\hsize]{figures/Ndetmap_kepk2_Msgt0d0_xbin45_ybin27.png}%
+  \includegraphics[width=\hsize]{Ndetmap_kepk2_Msgt0d0_xbin45_ybin27.png}%
   \end{ocg}
   \hspace{-\hsize}%
   \caption{(\emph{Interactive figure}) Empirical population of confirmed close-in planets around low mass stars.
@@ -486,7 +488,7 @@ are shown in \autoref{fig:senscurves}.
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.98\hsize]{figures/MES_SNR.png}
+  \includegraphics[width=0.98\hsize]{MES_SNR.png}
   \caption{Correlation between the \kepler{} multi-event statistic and transit S/N. The mapping between the MES and
     S/N based on the synthetic planetary signals injected into the \kepler{} pipeline \citep{christiansen15}.
     The number-weighted powerlaw fit (\emph{solid line}) to the correlation differs slightly from a one-to-one relation
@@ -497,7 +499,7 @@ are shown in \autoref{fig:senscurves}.
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.98\hsize]{figures/senscurves.png}
+  \includegraphics[width=0.98\hsize]{senscurves.png}
   \caption{Average detection sensitivity for \kepler{} and \ktwo{.} The \emph{solid curves} represent the
     average transiting planet detection sensitivity for the \kepler{} and \ktwo{} stars in our sample as
     a function of the transit S/N (Eq.~\ref{eq:snr}). The shaded regions mark the 16$^{th}$ and 84$^{th}$
@@ -595,7 +597,7 @@ averaged over the index $n$, are shown in \autoref{fig:sensmap}.
 
 \begin{figure*}
   \centering
-  \includegraphics[width=0.98\hsize]{figures/sensmap.png}
+  \includegraphics[width=0.98\hsize]{sensmap.png}
   \caption{Average detection sensitivity versus orbital period and planetary radius.
     The detection sensitivity maps averaged over \kepler{} stars (\emph{left panel)} and over \ktwo{} stars
     (\emph{right panel}) from our sample of low mass dwarf stars.} 
@@ -622,7 +624,7 @@ shown in \autoref{fig:compmap}.
 
 \begin{figure*}
   \centering
-  \includegraphics[width=0.98\hsize]{figures/compmap.png}
+  \includegraphics[width=0.98\hsize]{compmap.png}
   \caption{Average completeness versus orbital period and planetary radius.
     Maps of the product of the detection sensitivity and geometric transit probability averaged over \kepler{} stars
     (\emph{left panel)} and over \ktwo{} stars (\emph{right panel}) from our sample of low mass dwarf stars.} 
@@ -703,24 +705,24 @@ $r_p\in [0.5,4]$ R$_{\oplus}$.
 
 \begin{figure*}
   \centering
-  \includegraphics[width=.9\hsize]{figures/fmap_bkgd_Msgt0d0_xbin39_ybin26.png}%
+  \includegraphics[width=.9\hsize]{fmap_bkgd_Msgt0d0_xbin39_ybin26.png}%
   \hspace{-.9\hsize}%
   \begin{ocg}{fig:off3}{fig:off3}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on3}{fig:on3}{1}%
-  \includegraphics[width=.9\hsize]{figures/fmap_kepk2_Msgt0d0_xbin39_ybin26.png}%
+  \includegraphics[width=.9\hsize]{fmap_kepk2_Msgt0d0_xbin39_ybin26.png}%
   \end{ocg}
   \hspace{-.9\hsize}%
   \begin{ocg}{fig:off1}{fig:off1}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on1}{fig:on1}{1}%
-  \includegraphics[width=.9\hsize]{figures/fmap_curve_Msgt0d0_xbin39_ybin26.png}%
+  \includegraphics[width=.9\hsize]{fmap_curve_Msgt0d0_xbin39_ybin26.png}%
   \end{ocg}
   \hspace{-.9\hsize}%
   \begin{ocg}{fig:off4}{fig:off4}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on4}{fig:on4}{1}%
-  \includegraphics[width=.9\hsize]{figures/fmap_planets_Msgt0d0_xbin39_ybin26.png}%
+  \includegraphics[width=.9\hsize]{fmap_planets_Msgt0d0_xbin39_ybin26.png}%
   \end{ocg}
   \hspace{-.9\hsize}%
   \caption{(\emph{Interactive figure}) Planet occurrence rate versus orbital period and planetary radius. The maximum a-posteriori occurrence
@@ -792,7 +794,7 @@ $r_p\lesssim 1$ R$_{\oplus}$ where the detection sensitivity is poor.
   
 \begin{figure*}
   \centering
-  \includegraphics[scale=.8]{figures/rphist_double.png}
+  \includegraphics[scale=.8]{rphist_double.png}
   \caption{Occurrence rate of planets as a function of size. \emph{Upper panel}:
     histogram depicting the relative occurrence
     rate of close-in planets with orbital periods $<100$ days derived from the population of confirmed
@@ -879,7 +881,7 @@ for the remainder of this study.
 
 \begin{figure*}
   \centering
-  \includegraphics[scale=.8]{figures/rphist_kruse.png}
+  \includegraphics[scale=.8]{rphist_kruse.png}
   \caption{Comparison of occurrence rates with and without planet candidates included. \emph{Left panel}:
     same as \autoref{fig:rphist}. \emph{Right panel}: histogram depicting the relative occurrence
     rate of close-in planets with orbital periods $<100$ days derived from the population of confirmed
@@ -943,30 +945,30 @@ in this work and around FGK stars from the CKS \citep{martinez19} are reported i
 
 \begin{figure*}
   \centering
-  \includegraphics[width=0.85\hsize]{figures/fmapFmart_bkgd_Msgt0d0_xbin39_ybin26_insolation.png}%
+  \includegraphics[width=0.85\hsize]{fmapFmart_bkgd_Msgt0d0_xbin39_ybin26_insolation.png}%
   \hspace{-0.85\hsize}%
   \begin{ocg}{fig:off1F}{fig:off1F}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on1F}{fig:on1F}{1}%
-  \includegraphics[width=0.85\hsize]{figures/fmapFmart_kepk2_Msgt0d0_xbin39_ybin26_insolation.png}%
+  \includegraphics[width=0.85\hsize]{fmapFmart_kepk2_Msgt0d0_xbin39_ybin26_insolation.png}%
   \end{ocg}
   \hspace{-0.85\hsize}%
   \begin{ocg}{fig:off2F}{fig:off2F}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on2F}{fig:on2F}{1}%
-  \includegraphics[width=0.85\hsize]{figures/fmapFmart_slope_Msgt0d0_xbin39_ybin26_insolation.png}%
+  \includegraphics[width=0.85\hsize]{fmapFmart_slope_Msgt0d0_xbin39_ybin26_insolation.png}%
   \end{ocg}
   \hspace{-0.85\hsize}%
   \begin{ocg}{fig:off3F}{fig:off3F}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on3F}{fig:on3F}{1}%
-  \includegraphics[width=0.85\hsize]{figures/fmapFmart_models_Msgt0d0_xbin39_ybin26_insolation.png}%
+  \includegraphics[width=0.85\hsize]{fmapFmart_models_Msgt0d0_xbin39_ybin26_insolation.png}%
   \end{ocg}
   \hspace{-0.85\hsize}%
   \begin{ocg}{fig:off4F}{fig:off4F}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on4F}{fig:on4F}{1}%
-  \includegraphics[width=0.85\hsize]{figures/fmapFmart_planets_Msgt0d0_xbin39_ybin26_insolation.png}%
+  \includegraphics[width=0.85\hsize]{fmapFmart_planets_Msgt0d0_xbin39_ybin26_insolation.png}%
   \end{ocg}
   \hspace{-0.85\hsize}%
   \caption{(\emph{Interactive figure})
@@ -1055,12 +1057,12 @@ M$_{\odot}$ (i.e. $\sim 62$\% of our confirmed planet sample).
 
 \begin{figure*}
   \centering
-  \includegraphics[width=.98\hsize]{figures/rphist_bkgd_compMs.png}%
+  \includegraphics[width=.98\hsize]{rphist_bkgd_compMs.png}%
   \hspace{-.98\hsize}%
   \begin{ocg}{fig:off4r}{fig:off4r}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on4r}{fig:on4r}{1}%
-  \includegraphics[width=.98\hsize]{figures/rphist_kepk2_compMs.png}%
+  \includegraphics[width=.98\hsize]{rphist_kepk2_compMs.png}%
   \end{ocg}
   \hspace{-.98\hsize}%
   \caption{(\emph{Interactive figure}) 2D and 1D planet occurrence rates in various stellar mass bins. \emph{Top panels}: planet occurrence
@@ -1157,30 +1159,30 @@ rocky to non-rocky planets despite the latter being inherently rare around these
 
 \begin{figure*}
   \centering
-  \includegraphics[width=.97\hsize]{figures/rpvMsFULL_KepK2_bkgd.png}%
+  \includegraphics[width=.97\hsize]{rpvMsFULL_KepK2_bkgd.png}%
   \hspace{-.97\hsize}%
   \begin{ocg}{fig:off4M}{fig:off4M}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on4M}{fig:on4M}{1}%
-  \includegraphics[width=.97\hsize]{figures/rpvMsFULL_KepK2_models.png}%
+  \includegraphics[width=.97\hsize]{rpvMsFULL_KepK2_models.png}%
   \end{ocg}
   \hspace{-.97\hsize}%
   \begin{ocg}{fig:off1M}{fig:off1M}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on1M}{fig:on1M}{1}%
-  \includegraphics[width=.97\hsize]{figures/rpvMsFULL_KepK2_FP18.png}%
+  \includegraphics[width=.97\hsize]{rpvMsFULL_KepK2_FP18.png}%
   \end{ocg}
   \hspace{-.97\hsize}%
   \begin{ocg}{fig:off3M}{fig:off3M}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on3M}{fig:on3M}{1}%
-  \includegraphics[width=.97\hsize]{figures/rpvMsFULL_KepK2_bin.png}%
+  \includegraphics[width=.97\hsize]{rpvMsFULL_KepK2_bin.png}%
   \end{ocg}
   \hspace{-.97\hsize}%
   \begin{ocg}{fig:off2M}{fig:off2M}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on2M}{fig:on2M}{1}%
-  \includegraphics[width=.97\hsize]{figures/rpvMsFULL_KepK2_Ms.png}%
+  \includegraphics[width=.97\hsize]{rpvMsFULL_KepK2_Ms.png}%
   \end{ocg}
   \hspace{-.97\hsize}%
   \caption{(\emph{Interactive figure}) Evolution of the radius valley features with stellar mass. \emph{Solid markers}:
@@ -1290,7 +1292,7 @@ approximation given that its detection sensitivity has not yet been adequately c
 
 \begin{figure*}
   \centering
-  \includegraphics[width=0.98\hsize]{figures/rpuncertainty_TESSv2.png}
+  \includegraphics[width=0.98\hsize]{rpuncertainty_TESSv2.png}
   \caption{Expected improvement in the measurement precision of the radius valley location with the number of observed
     low mass stars. Measurement precision curves of the upper and lower uncertainties on the location of the radius valley 
     are derived from binomial statistics. These calculations use approximate and expected detection sensitivity
@@ -1415,29 +1417,29 @@ intersect at $P\sim 23.52$ days such that two regions of interest emerge and are
   NASA's Transiting Exoplanet Survey Satellite \citep[\tess{;}][]{ricker15} has already identified eleven
   TOIs\footnote{\tess{} Object-of-Interest.}
   around stars with \teff{} $<4700$ K that satisfy Eq.~\ref{eq:transition} and should be targeted by RV
-  follow-up campaigns.\footnote{TOIs: 134.01 \citep{astudillodefru19}, 237.01, 260.01, 393.01, 544.01, 702.01, 807.01, 833.01,
-    836.02, 873.01, and 1075.01.} Note that all eleven planet candidates have $P<23.52$ days.
+  follow-up campaigns.\footnote{TOIs: 134.01 \citep{astudillodefru19}, 237.01, 260.01, 544.01, 702.01, 807.01, 833.01,
+    836.02, 873.01, 1075.01, and 1201.01.} Note that all eleven planet candidates have $P<23.52$ days.
 
 \begin{figure}
   \centering
-  \includegraphics[width=\hsize]{figures/fmapregion_bkgd_Msgt0d0_xbin39_ybin26.png}%
+  \includegraphics[width=\hsize]{fmapregion_bkgd_Msgt0d0_xbin39_ybin26.png}%
   \hspace{-\hsize}%
   \begin{ocg}{fig:off4pr}{fig:off4pr}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on4pr}{fig:on4pr}{1}%
-  \includegraphics[width=\hsize]{figures/fmapregion_slope_Msgt0d0_xbin39_ybin26.png}%
+  \includegraphics[width=\hsize]{fmapregion_slope_Msgt0d0_xbin39_ybin26.png}%
   \end{ocg}
   \hspace{-\hsize}%
   \begin{ocg}{fig:off1pr}{fig:off1pr}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on1pr}{fig:on1pr}{1}%
-  \includegraphics[width=\hsize]{figures/fmapregion_planets_Msgt0d0_xbin39_ybin26.png}%
+  \includegraphics[width=\hsize]{fmapregion_planets_Msgt0d0_xbin39_ybin26.png}%
   \end{ocg}
   \hspace{-\hsize}%
   \begin{ocg}{fig:off3pr}{fig:off3pr}{0}%
   \end{ocg}%
   \begin{ocg}{fig:on3pr}{fig:on3pr}{1}%
-  \includegraphics[width=\hsize]{figures/fmapregion_tois_Msgt0d0_xbin39_ybin26.png}%
+  \includegraphics[width=\hsize]{fmapregion_tois_Msgt0d0_xbin39_ybin26.png}%
   \end{ocg}
   \hspace{-\hsize}%
   \caption{(\emph{Interactive figure}) Regions of interest for resolving the transition between rocky and non-rocky planets
